# service-auth/src/components/shared/errors/validation-error.js
@@ -1,0 +1,8 @@
+import { AppError } from './app-error';
+
+export class ValidationError extends AppError {
+  constructor(errors) {
+    super(400, 'Validation error', 'validationError');
+    this.invalidProperties = Object.keys(errors).map((key) => ({ name: key, message: errors[key].message }));
+  }
+}
