# service-task/src/components/shared/errors/mongo-error-types.js
@@ -1,0 +1,4 @@
+export const mongoErrorTypes = {
+  mongoError: 'MongoError',
+  validationError: 'ValidationError',
+};
